--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20
-yarn_mappings=1.20+build.1
-loader_version=0.15.7
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
+loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.0.1
+mod_name=Chai's Build Tools
+mod_version=1.0.1+1.21
 maven_group=com.chailotl.build_tools
 archives_base_name=build_tools
 
 # Dependencies
-fabric_version=0.83.0+1.20
+fabric_version=0.101.2+1.21
