--- a/build.gradle
+++ b/build.gradle
@@ -35,13 +35,13 @@ dependencies {
 }
 
 processResources {
-	inputs.property "version", project.version
-	inputs.property "name", project.mod_name
+	def map = [
+			"name": project.mod_name,
+			"version": project.version
+	]
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version,
-				"name": project.mod_name
-	}
+	inputs.properties(map)
+	filesMatching("fabric.mod.json") { expand(map) }
 }
 
 tasks.withType(JavaCompile).configureEach {
